adding an income/expense report listing details of any given category
git-svn-id: https://jmoney.svn.sf.net/svnroot/jmoney/trunk@567 b97006a3-7e3d-0410-986d-ea81e883d316